Fix sonar issues

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@
 /afs/afs-mapdb/target/
 /afs/afs-mapdb-storage/target/
 /afs/afs-storage-api/target/
+/ampl-converter/target/
 /cim-anonymiser/target/
 /cim1/cim1-converter/target/
 /cim1/cim1-model/target/
