--- a/contingency-api/pom.xml
+++ b/contingency-api/pom.xml
@@ -45,6 +45,11 @@
 
         <!-- Test dependencies -->
         <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava-testlib</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>com.google.jimfs</groupId>
             <artifactId>jimfs</artifactId>
             <scope>test</scope>
