--- a/afs/afs-core/pom.xml
+++ b/afs/afs-core/pom.xml
@@ -19,7 +19,8 @@
     </parent>
 
     <artifactId>powsybl-afs-core</artifactId>
-    <name>AFS core</name>
+    <name>AFS core classes</name>
+    <description>AFS core classes</description>
 
     <build>
         <plugins>
