--- a/afs/afs-ext-base/pom.xml
+++ b/afs/afs-ext-base/pom.xml
@@ -20,6 +20,7 @@
 
     <artifactId>powsybl-afs-ext-base</artifactId>
     <name>AFS base extensions</name>
+    <description>A set of AFS extension classes</description>
 
     <build>
         <plugins>
