--- a/afs/afs-mapdb/pom.xml
+++ b/afs/afs-mapdb/pom.xml
@@ -19,7 +19,8 @@
     </parent>
 
     <artifactId>powsybl-afs-mapdb</artifactId>
-    <name>AFS MapDB impl</name>
+    <name>AFS MapDB filesystem implementation</name>
+    <description>An AFS filesystem implementation based on MapDB</description>
 
     <dependencies>
         <!-- Compilation dependencies -->
