--- a/math/pom.xml
+++ b/math/pom.xml
@@ -20,7 +20,7 @@
 
     <artifactId>powsybl-math</artifactId>
     <name>Math</name>
-    <description>This is a library that provides mathematical utilities</description>
+    <description>A set of mathematical utilities</description>
 
     <dependencies>
         <!-- Compilation dependencies -->
