--- a/ucte/ucte-converter/pom.xml
+++ b/ucte/ucte-converter/pom.xml
@@ -19,7 +19,8 @@
     </parent>
 
     <artifactId>powsybl-ucte-converter</artifactId>
-    <name>UCTE converter</name>
+    <name>UCTE converter implementation</name>
+    <description>A converter implementation for UCTE networks</description>
 
     <dependencies>
         <!-- Compilation dependencies -->
