--- a/action/action-simulator/pom.xml
+++ b/action/action-simulator/pom.xml
@@ -20,6 +20,7 @@
 
     <artifactId>powsybl-action-simulator</artifactId>
     <name>Action simulator</name>
+    <description>A tool to run simulations with preventive or curative actions</description>
 
     <build>
         <plugins>
