--- a/cim1/cim1-converter/pom.xml
+++ b/cim1/cim1-converter/pom.xml
@@ -19,7 +19,8 @@
     </parent>
 
     <artifactId>powsybl-cim1-converter</artifactId>
-    <name>CIM ENTSO-E V1 converter</name>
+    <name>CIM1 converter implementation</name>
+    <description>A converter implementation for CIM ENTSO-E V1 networks</description>
 
     <dependencies>
         <!-- Compilation dependencies -->
