--- a/computation-local/pom.xml
+++ b/computation-local/pom.xml
@@ -20,6 +20,7 @@
     
     <artifactId>powsybl-computation-local</artifactId>
     <name>Local computation</name>
+    <description>A computation implementation to run computations locally</description>
     
     <dependencies>
         <!-- Compilation dependencies -->
