--- a/iidm/iidm-converter-api/pom.xml
+++ b/iidm/iidm-converter-api/pom.xml
@@ -20,7 +20,7 @@
 
     <artifactId>powsybl-iidm-converter-api</artifactId>
     <name>IIDM converter API</name>
-    <description>This is the API for IIDM importers and exporters</description>
+    <description>An API to import and export IIDM networks</description>
 
     <dependencies>
         <!-- Compilation dependencies -->
