--- a/ucte/pom.xml
+++ b/ucte/pom.xml
@@ -21,6 +21,7 @@
     <packaging>pom</packaging>
     <artifactId>powsybl-ucte</artifactId>
     <name>UCTE</name>
+    <description>UCTE meta-package</description>
 
     <modules>
         <module>ucte-converter</module>
