--- a/action/pom.xml
+++ b/action/pom.xml
@@ -21,6 +21,7 @@
     <packaging>pom</packaging>
     <artifactId>powsybl-action</artifactId>
     <name>Action</name>
+    <description>Action aggregator module</description>
 
     <modules>
         <module>action-dsl</module>
