--- a/cim1/pom.xml
+++ b/cim1/pom.xml
@@ -21,6 +21,7 @@
     <packaging>pom</packaging>
     <artifactId>powsybl-cim1</artifactId>
     <name>CIM1</name>
+    <description>CIM1 aggregator module</description>
 
     <modules>
         <module>cim1-converter</module>
