--- a/iidm/iidm-util/pom.xml
+++ b/iidm/iidm-util/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>powsybl-iidm</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
 
