--- a/loadflow/loadflow-api/pom.xml
+++ b/loadflow/loadflow-api/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-loadflow</artifactId>
-        <version>1.0.0-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>powsybl-loadflow-api</artifactId>
