--- a/security-analysis/pom.xml
+++ b/security-analysis/pom.xml
@@ -10,7 +10,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
@@ -20,14 +19,14 @@
     </parent>
 
     <packaging>pom</packaging>
-    <artifactId>powsybl-security-analysis-parent</artifactId>
-    <name>Security analysis parent</name>
+    <artifactId>powsybl-security-analysis</artifactId>
+    <name>Security analysis</name>
     <description>Security analysis aggregator module</description>
 
     <modules>
-        <module>security-analysis</module>
         <module>security-analysis-afs</module>
-        <module>security-analysis-local</module>
+        <module>security-analysis-afs-local</module>
+        <module>security-analysis-api</module>
     </modules>
 
 </project>
