--- a/security-analysis/security-analysis-afs-local/pom.xml
+++ b/security-analysis/security-analysis-afs-local/pom.xml
@@ -13,7 +13,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <artifactId>powsybl-security-analysis-parent</artifactId>
+        <artifactId>powsybl-security-analysis</artifactId>
         <groupId>com.powsybl</groupId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
@@ -43,7 +43,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.powsybl</groupId>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-afs-core</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
