--- a/security-analysis/security-analysis-api/pom.xml
+++ b/security-analysis/security-analysis-api/pom.xml
@@ -19,7 +19,7 @@
     </parent>
 
     <artifactId>powsybl-security-analysis-api</artifactId>
-    <name>Security analysis</name>
+    <name>Security analysis API</name>
     <description>An API, an implementation and a tool to run security analysis</description>
 
     <build>
