--- a/afs/afs-ext-base/pom.xml
+++ b/afs/afs-ext-base/pom.xml
@@ -58,6 +58,10 @@
 
         <!-- Test dependencies -->
         <dependency>
+            <groupId>com.google.jimfs</groupId>
+            <artifactId>jimfs</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <scope>test</scope>
