--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
         <maven.checkstyle.version>3.0.0</maven.checkstyle.version>
         <maven.compiler.version>3.6.0</maven.compiler.version>
         <maven.coveralls.version>4.3.0</maven.coveralls.version>
+        <maven.dependency.version>3.0.1</maven.dependency.version>
         <maven.deploy.version>2.8.2</maven.deploy.version>
         <maven.findbugs.version>3.0.4</maven.findbugs.version>
         <maven.gpg.version>1.6</maven.gpg.version>
@@ -106,6 +107,7 @@
             **/cim1/**/*, **/generated/**/*
         </sonar.exclusions>
 
+        <arquillianbom.version>1.2.0.Final</arquillianbom.version>
         <autoservice.version>1.0-rc2</autoservice.version>
         <commonscli.version>1.3.1</commonscli.version>
         <commonscompress.version>1.13</commonscompress.version>
@@ -118,8 +120,10 @@
         <guava.version>20.0</guava.version>
         <jackson.version>2.8.7</jackson.version>
         <jama.version>1.0.3</jama.version>
+        <javaeeapi.version>7.0</javaeeapi.version>
         <jgrapht.version>1.0.1</jgrapht.version>
         <jimfs.version>1.1</jimfs.version>
+        <jjwt.version>0.9.0</jjwt.version>
         <jodatime.version>2.9.7</jodatime.version>
         <junit.version>4.12</junit.version>
         <logback.version>1.1.8</logback.version>
@@ -127,13 +131,19 @@
         <mockito.version>1.10.19</mockito.version>
         <poi.version>3.15</poi.version>
         <protobuf.version>2.5.0</protobuf.version>
+        <resteasy.version>3.1.4.Final</resteasy.version>
+        <shrinkwrap-resolver.version>2.2.6</shrinkwrap-resolver.version>
         <sirocco.version>1.0</sirocco.version>
         <slf4j.version>1.7.22</slf4j.version>
         <staxutils.version>20070216</staxutils.version>
         <supercsv.version>2.4.0</supercsv.version>
+        <swaggerjaxrs.version>1.5.16</swaggerjaxrs.version>
         <threeten.version>1.0</threeten.version>
         <trove4j.version>3.0.3</trove4j.version>
         <truevfs.version>0.11.1</truevfs.version>
+        <tyrus.version>1.13.1</tyrus.version>
+        <wildfly.dist.version>11.0.0.Final</wildfly.dist.version>
+        <wildflyarquilliancontainerembedded.version>2.1.0.Final</wildflyarquilliancontainerembedded.version>
         <xmlunit.version>2.3.0</xmlunit.version>
     </properties>
 
