--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -84,6 +84,10 @@
             <groupId>org.ow2.sirocco</groupId>
             <artifactId>sirocco-text-table-formatter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
