--- a/loadflow/loadflow-results-completion/pom.xml
+++ b/loadflow/loadflow-results-completion/pom.xml
@@ -18,8 +18,8 @@
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>powsybl-results-completion-loadflow</artifactId>
-    <name>Results Completion Loadflow</name>
+    <artifactId>powsybl-loadflow-results-completion</artifactId>
+    <name>Loadflow Results Completion</name>
     <description>A tool to complete load-flow results</description>
 
     <dependencies>
