Implement CandidateComputation interface

--- a/loadflow/loadflow-results-completion/pom.xml
+++ b/loadflow/loadflow-results-completion/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>powsybl-loadflow-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-loadflow-validation</artifactId>
+            <version>${project.version}</version>
+        </dependency>
 
         <!-- Test dependencies -->
         <dependency>
