--- a/afs/afs-network/afs-network-server/pom.xml
+++ b/afs/afs-network/afs-network-server/pom.xml
@@ -20,6 +20,7 @@
 
     <artifactId>powsybl-afs-network-server</artifactId>
     <name>Network cache AFS server</name>
+    <description>Network cache AFS server</description>
 
     <build>
         <finalName>${project.artifactId}</finalName>
