--- a/afs/afs-ws/afs-ws-utils/pom.xml
+++ b/afs/afs-ws/afs-ws-utils/pom.xml
@@ -19,18 +19,17 @@
 
     <artifactId>powsybl-afs-ws-utils</artifactId>
     <name>AFS WS Utilities</name>
+    <description>AFS WS Utilities</description>
 
     <dependencies>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>${javaeeapi.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.jaxrs</groupId>
             <artifactId>jackson-jaxrs-json-provider</artifactId>
-            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-api</artifactId>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
