--- a/afs/afs-ws/pom.xml
+++ b/afs/afs-ws/pom.xml
@@ -20,6 +20,7 @@
 
     <artifactId>powsybl-afs-ws</artifactId>
     <name>AFS WS</name>
+    <description>AFS WS</description>
     <packaging>pom</packaging>
 
     <modules>
