--- a/afs/afs-ws/afs-ws-server-utils/pom.xml
+++ b/afs/afs-ws/afs-ws-server-utils/pom.xml
@@ -29,10 +29,19 @@
             <artifactId>javaee-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>powsybl-afs-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>powsybl-afs-ws-utils</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
