--- a/afs/afs-ws/afs-ws-storage/pom.xml
+++ b/afs/afs-ws/afs-ws-storage/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-afs-ws</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <artifactId>powsybl-afs-ws-storage</artifactId>
