--- a/security-analysis/security-analysis-afs/pom.xml
+++ b/security-analysis/security-analysis-afs/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-security-analysis</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.1.0</version>
     </parent>
 
     <artifactId>powsybl-security-analysis-afs</artifactId>
