--- a/afs/afs-mapdb-storage/pom.xml
+++ b/afs/afs-mapdb-storage/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>powsybl-afs</artifactId>
         <groupId>com.powsybl</groupId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-afs-mapdb-storage</artifactId>
