--- a/afs/afs-network/afs-network-server/pom.xml
+++ b/afs/afs-network/afs-network-server/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-afs-network</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-afs-network-server</artifactId>
