--- a/afs/afs-ws/afs-ws-server-utils/pom.xml
+++ b/afs/afs-ws/afs-ws-server-utils/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <groupId>com.powsybl</groupId>
         <artifactId>powsybl-afs-ws</artifactId>
-        <version>1.1.0</version>
+        <version>1.2.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>powsybl-afs-ws-server-utils</artifactId>
