Isolation des jar qui posent problème aux tests arquillian

--- a/pom.xml
+++ b/pom.xml
@@ -349,7 +349,7 @@
         <profile>
             <id>checks</id>
             <activation>
-                <activeByDefault>false</activeByDefault>
+                <activeByDefault>true</activeByDefault>
             </activation>
             <build>
                 <plugins>
